# 3806ICT-Assignment-2

./: .gitignore  README.md  notes.txt
src/my_sim_pkg/: CMakeLists.txt  package.xml  setup.py
src/my_sim_pkg/config/: shared_settings.yaml
src/my_sim_pkg/launch/: robot_system.launch  spawn_robots.launch  world_simulation.launch
src/my_sim_pkg/media/materials/programs/: grid_fp.glsl  grid_vp.glsl
src/my_sim_pkg/models/Base Station/: model.sdf
src/my_sim_pkg/models/Base Station/meshes/: antenna.dae  tent.dae
src/my_sim_pkg/models/cardboard_box/: model.sdf
src/my_sim_pkg/models/custom_ground_plane/: model.config  model.sdf
src/my_sim_pkg/models/house_1/: model.sdf
src/my_sim_pkg/models/turtlebot3_burger_1/: model.sdf
src/my_sim_pkg/models/turtlebot3_burger_2/: model.sdf
src/my_sim_pkg/models/turtlebot3_burger_3/: model.sdf
src/my_sim_pkg/models/turtlebot3_burger_4/: model.sdf
src/my_sim_pkg/pat/: fresh_world.csp  world.csp
src/my_sim_pkg/pat/robot1/: robot1deliverpizza.csp  robot1gohome.csp  robot1main.csp
src/my_sim_pkg/pat/robot2/: robot2deliverpizza.csp  robot2gohome.csp  robot2main.csp
src/my_sim_pkg/pat/robot3/: robot3deliverpizza.csp  robot3gohome.csp  robot3main.csp
src/my_sim_pkg/pat/robot4/: robot4deliverpizza.csp  robot4gohome.csp  robot4main.csp
src/my_sim_pkg/scripts/: dispatcher.py  grid_manager.py  relay_server.py  robot_controller_node.py  spawn_entities.py  spawn_houses.py  spawn_obstacles.py
src/my_sim_pkg/scripts/entities/: Robot.py
src/my_sim_pkg/src/: World.py  __init__.py  a_star.py  dispatcher.py  dispatcher.txt  grid_manager.py  old_stable_controller.txt  pat_helper.py  relay_server.py  robot.py  robot_controller_node.py  world.py
src/my_sim_pkg/src/OUTPUT_TESTS/: 20250531-142728_test.txt  20250531-214600_test.txt  20250531-214935_test.txt  20250531-215228_test.txt  20250531-215351_test.txt  20250531-215502_test.txt  20250531-220048_test.txt  20250531-220400_test.txt  20250531-220626_test.txt  20250531-220832_test.txt  20250531-221110_test.txt  20250531-221451_test.txt  20250531-221648_test.txt  20250531-221911_test.txt  20250531-222203_test.txt  20250531-222613_test.txt  20250531-223109_test.txt  20250531-223312_test.txt  20250531-223523_test.txt  20250531-223656_test.txt  20250531-223834_test.txt  20250531-224006_test.txt  20250531-224145_test.txt  20250531-224600_test.txt  20250531-224747_test.txt  20250531-225003_test.txt  20250531-225237_test.txt
src/my_sim_pkg/src/output/: move_bot_1.txt  move_bot_2.txt  move_bot_3.txt  move_bot_4.txt  obstacle_discovery_bot_1.txt  obstacle_discovery_bot_4.txt  world_snapshot.txt
src/my_sim_pkg/src/settings/: load_yaml.py
src/my_sim_pkg/srv/grid/: GetHouseLocations.srv  UpdateCurrentBotPosition.srv  UpdateGrid.srv
src/my_sim_pkg/srv/relay/: ListenForOrderTaken.srv  ListenToOrderStatus.srv  ListenToQueue.srv  SignalOrderReady.srv  SignalQueuedUp.srv
src/my_sim_pkg/worlds/: pizza_delivery_world.sdf
